# sparrowhawk

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  environment.yml  setup.py
sparrowhawk/: __init__.py  __main__.py
src/: bit_encoding.rs  bloom_filter.rs  cli.rs  count_min.cuh  cuda.cuh  dbg.cu  device_reads.cuh  fastx_wasm.rs  gpu_filter.rs  graph_works.rs  hash.cuh  io_utils.rs  kmer.rs  lib.rs  main.rs  nthash.rs  preprocessing.rs  python_bindings.cu  save_functions.rs  seqio.cpp  seqio.hpp  spectrum_fitter.rs  utils.cuh
src/algorithms/: builder.rs  collapser.rs  corrector.rs  mod.rs  pruner.rs  shrinker.rs
src/gpu/: cuda.cuh  gpu.cuh  gpu_api.cu  utils.cu
src/graphs/: mod.rs  pt_graph.rs
src/shaders/: boundary_detect.wgsl  count_segments.wgsl  filter_mark.wgsl  prefix_sum.wgsl  radix_count.wgsl  radix_prefix_global.wgsl  radix_prefix_wg.wgsl  radix_scatter.wgsl  radix_wg_offset.wgsl  scatter_output.wgsl
test/: example.gfa
